BajiDeveloperEdition/src/objects/Books__c.object
<CustomObject>
    <fields>
        <fullName>Book_Price__c</fullName>
        <externalId>true</externalId>
        <label>Book Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Received_Date__c</fullName>
        <label>Book_Received_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispatched_to_Library__c</fullName>
        <label>Dispatched_to_Library</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Benguluru</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>asdfa__c</fullName>
        <label>asdfa</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Books</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>